@@ -7,6 +7,8 @@ module ActiveScaffold
         include ActiveScaffold::RespondsToParent
         include ActiveScaffold::Helpers::ControllerHelpers
         include ActiveScaffold::ActiveRecordPermissions::ModelUserAccess::Controller
+        puts 'prepare_all'
+        ActiveScaffold::Bridges.prepare_all
       end
     end
 
